# aitelier

./: README.md  pyproject.toml
.dvc/: config
aitelier-ml/: pyproject.toml
aitelier-ml/data/: .gitignore  processed.dvc  raw.dvc  unzipped.dvc
aitelier-ml/notebooks/: 2_customers_feature_engineering.ipynb  3_interaction_data_generation.ipynb  3_transactions_feature_engineering.ipynb  4_interaction_data_generation.ipynb  5_ranking_data_generation.ipynb  articles_feature_engineering.ipynb  transactions_feature_engineering.ipynb
